Notes added for refence

--- a/src/app/components/add-question/add-question.component.html
+++ b/src/app/components/add-question/add-question.component.html
@@ -3,6 +3,7 @@
     Add New FAQ
   </div>
   <div class='card-block'>
+    <!---2 way data binding and form submission-->
     <form (submit)="addQuestion()">
       <div class="form-group">
         <label for="text"> Question Text </label>
