--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -1,5 +1,5 @@
 <div class='question'>
-
+<!-- setting card structure displying values-->
   <div class='card'>
     <div class="card-header">
     {{question.text}} <a href="#" class="btn btn-link" (click)="question.hide = !question.hide">Show
